[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
server = { path = "../server" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-serde = { version = "0.9", features = ["bincode"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
bincode = "1"
tracing-appender = "0.2"
socket2 = { version = "0.5", features = ["all"] }